--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,9 +1,9 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 2260f05
+_commit: a2ec9fc
 _src_path: git@github.com:lukin0110/poetry-copier.git
 ci: github
 description: An example of a FastAPI app that was scaffolded with Poetry Copier
-name: FastAPI Demo
+name: Marty McFly
 package_type: fastapi
 repository_url: https://github.com/lukin0110/poetry-copier-fastapi-demo
 use_makefile: true
