--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,16 @@
 {
-  "name": "fastapi_demo",
+  "name": "marty_mcfly",
   "dockerComposeFile": "../docker-compose.yml",
   "service": "devcontainer",
   "runServices": [
     "devcontainer"
   ],
   "shutdownAction": "stopCompose",
-  "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/fastapi_demo/,type=bind,consistency=delegated",
-  "workspaceFolder": "/workspaces/fastapi_demo/",
+  "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/marty_mcfly/,type=bind,consistency=delegated",
+  "workspaceFolder": "/workspaces/marty_mcfly/",
   "remoteUser": "root",
   "overrideCommand": true,
-  "initializeCommand": "touch .env",
+  "initializeCommand": "touch ${localWorkspaceFolder}/.env",
   "mounts": [
     "type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock,consistency=consistent"
   ],
@@ -47,7 +47,7 @@
           "editor.formatOnSave": false
         },
         "mypy-type-checker.importStrategy": "fromEnvironment",
-        "python.defaultInterpreterPath": "/opt/fastapi_demo-env/bin/python",
+        "python.defaultInterpreterPath": "/opt/marty_mcfly-env/bin/python",
         "python.terminal.activateEnvironment": false,
         "python.testing.pytestEnabled": true,
         "remote.containers.copyGitConfig": true,
