--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/workspaces/fastapi_demo/
+      - .:/workspaces/marty_mcfly/
 
   # Container definition for running the FastAPI app in production
   app:
@@ -20,13 +20,11 @@ services:
       target: app
     tty: true
     ports:
-      - "8000:8000"
-    expose:
-      - 8000
+      - "8001:8000"
     volumes:
-      - .:/workspaces/fastapi_demo/
+      - .:/workspaces/marty_mcfly/
     command: ["serve", "--dev"]
 
 networks:
   default:
-    name: fastapi_demo-network
+    name: marty_mcfly-network
