--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
   devcontainer:
     build:
       context: .
+      args:
+        PYTHON_VERSION: ${PYTHON_VERSION:-3.11.6}
       target: dev
     stdin_open: true
     tty: true
-    ports:
-      - "8000:8000"
     volumes:
       - .:/workspaces/marty_mcfly/
 
