--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,8 @@ jobs:
       # https://github.com/devcontainers/ci
       - name: Build DevContainer
         uses: devcontainers/ci@v0.3
+        env:
+          PYTHON_VERSION: ${{ matrix.python-version }}
         with:
           imageName: ghcr.io/${{ github.repository }}
           cacheFrom: ghcr.io/${{ github.repository }}:${{ env.TAG }}
